--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 
     <main>
       <nav class="links" aria-label="Main navigation">
-        <a href="https://www.youtube.com/watch?v=cly_kwKgV0c" class="link-button featured" style="position: relative; animation: pulse 2s infinite;">
-          Godzilla Finds Love Music Video
+        <a href="https://open.spotify.com/track/0iyRliDEyELeaS3nqDFcNh?si=4546283f4eee4a71" class="link-button featured" style="position: relative; animation: pulse 2s infinite;">
+          Debut Track "Solipsism" Available Now
         </a>
         <a href="https://open.spotify.com/artist/0osGQAOCe28VIORTfL9Gwz" class="link-button">Spotify</a>
         <a href="https://music.apple.com/us/artist/onirojen/1774424827" class="link-button">Apple Music</a>
