--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onirojen - Dark Melodic Techno Funk Artist</title>
-    <meta name="description" content="Official link page for Onirojen, a dark melodic techno funk artist. Find links to music, videos, and social media.">
+    <meta
+      name="description"
+      content="Official link page for Onirojen, a dark melodic techno funk artist. Find links to music, videos, and social media."
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-C1DRD32MDL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-C1DRD32MDL");
+    </script>
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
@@ -55,7 +72,8 @@
         --transition-speed: 0.3s;
       }
       body {
-        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, sans-serif;
         background-image: linear-gradient(to bottom right, #1a1a1a, #333);
         background-size: cover;
         background-position: center;
@@ -134,14 +152,18 @@
       }
 
       .featured {
-        background: linear-gradient(45deg, rgba(0, 123, 255, 0.2), rgba(255, 255, 255, 0.1));
+        background: linear-gradient(
+          45deg,
+          rgba(0, 123, 255, 0.2),
+          rgba(255, 255, 255, 0.1)
+        );
         border: 2px solid rgba(0, 123, 255, 0.5);
         position: relative;
         overflow: hidden;
       }
 
       .featured::before {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: -100%;
@@ -233,27 +255,57 @@
 
     <main>
       <nav class="links" aria-label="Main navigation">
-        <a href="https://youtu.be/5MXh5hLhfb0" class="link-button featured" style="position: relative; animation: pulse 2s infinite;">
+        <a
+          href="https://youtu.be/5MXh5hLhfb0"
+          class="link-button featured"
+          style="position: relative; animation: pulse 2s infinite"
+        >
           "Godzilla Finds Love" AI Music Video
         </a>
-        <a href="https://open.spotify.com/artist/0osGQAOCe28VIORTfL9Gwz" class="link-button">Spotify</a>
-        <a href="https://music.apple.com/us/artist/onirojen/1774424827" class="link-button">Apple Music</a>
-        <a href="https://www.youtube.com/channel/UCOhDTn3GbmY2peJM1h6XkRg" class="link-button">YouTube</a>
-        <a href="https://artists.landr.com/055855879011" class="link-button">Other Streaming Services</a>
+        <a
+          href="https://open.spotify.com/artist/0osGQAOCe28VIORTfL9Gwz"
+          class="link-button"
+          >Spotify</a
+        >
+        <a
+          href="https://music.apple.com/us/artist/onirojen/1774424827"
+          class="link-button"
+          >Apple Music</a
+        >
+        <a
+          href="https://www.youtube.com/channel/UCOhDTn3GbmY2peJM1h6XkRg"
+          class="link-button"
+          >YouTube</a
+        >
+        <a href="https://artists.landr.com/055855879011" class="link-button"
+          >Other Streaming Services</a
+        >
       </nav>
     </main>
 
     <footer>
       <nav class="social-links" aria-label="Social media links">
-        <a href="https://instagram.com/onirojen" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://instagram.com/onirojen"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fab fa-instagram" aria-hidden="true"></i>
           <span class="sr-only">Instagram</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCOhDTn3GbmY2peJM1h6XkRg" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://www.youtube.com/channel/UCOhDTn3GbmY2peJM1h6XkRg"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fab fa-youtube" aria-hidden="true"></i>
           <span class="sr-only">YouTube</span>
         </a>
-        <a href="https://open.spotify.com/artist/0osGQAOCe28VIORTfL9Gwz" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://open.spotify.com/artist/0osGQAOCe28VIORTfL9Gwz"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fab fa-spotify" aria-hidden="true"></i>
           <span class="sr-only">Spotify</span>
         </a>
